# tauri-bevy-mem-direct-demo

./: .gitignore  Cargo.toml  PLAN.md  justfile
crates/cef-exporter/: Cargo.toml
crates/cef-exporter/src/: main.rs
crates/desktop/: Cargo.toml
crates/desktop-cef/: Cargo.toml
crates/desktop-cef/src/: common.rs  linux.rs  main.rs  sidecar.rs  windows.rs
crates/desktop-wry/: Cargo.toml
crates/desktop-wry/src/: linux.rs  main.rs  sidecar.rs  win.rs
crates/desktop/src/: main.rs
crates/panel/: Cargo.toml
crates/panel/src/: app.rs  lib.rs
crates/panel/src/components/: keyboard_listener.rs  mod.rs  status_panel.rs  trend_chart.rs  video_player.rs
crates/panel/src/hooks/: mod.rs  use_clock.rs  use_ws.rs
crates/panel/web/: index.html  main.js  render-worker.js  styles.css
crates/renderer/: Cargo.toml
crates/renderer/src/: app.rs  camera.rs  frame_stream.rs  ipc.rs  lib.rs  main.rs  picking.rs  scene.rs  wry_overlay.rs
crates/server/: Cargo.toml
crates/server/src/: cubes.rs  data.rs  lib.rs  signaling.rs  ws.rs
crates/shared/: Cargo.toml
crates/shared/src/: cube.rs  event.rs  frame.rs  lib.rs  proto.rs  protocol.rs  shm.rs
docs/plans/: 2026-04-08-bevy-host-wry-overlay.md
scripts/: build_panel.py  copy_file.py  import_vsdevcmd.ps1  kill_processes.py
