[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/server",
    "crates/renderer",
    "crates/desktop",
]

[workspace.package]
edition = "2021"
authors = ["langyo <langyo.china@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.9"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
thiserror = "2"
anyhow = "1"
flume = "0.11"

bevy = "0.15"
raw-window-handle = "0.6"

winit = "0.30"
wry = "0.49"

tairitsu-web = { git = "https://github.com/celestia-island/tairitsu", branch = "dev" }
tairitsu-vdom = { git = "https://github.com/celestia-island/tairitsu", branch = "dev" }
tairitsu-hooks = { git = "https://github.com/celestia-island/tairitsu", branch = "dev" }
tairitsu-macros = { git = "https://github.com/celestia-island/tairitsu", branch = "dev" }
tairitsu-style = { git = "https://github.com/celestia-island/tairitsu", branch = "dev" }
hikari-components = { git = "https://github.com/celestia-island/hikari", branch = "dev" }
hikari-theme = { git = "https://github.com/celestia-island/hikari", branch = "dev" }
hikari-palette = { git = "https://github.com/celestia-island/hikari", branch = "dev" }

[patch.crates-io]
wry = { path = "vendor/wry" }
