[package]
name = "demo-panel-cef"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "demo-panel-cef"
path = "src/main.rs"

[dependencies]
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
anyhow = { workspace = true }
cef = { version = "146.5.0", default-features = false, features = ["build-util"] }
server = { path = "../server" }
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
flume = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
server = { path = "../server" }
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
flume = { workspace = true }
