[package]
name = "demo-panel"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "demo-panel"
path = "src/main.rs"

[dependencies]
server = { path = "../server" }
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
flume = { workspace = true }
webview2-com = "0.35"
windows-core = "0.59"
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_WinRT"] }
